- Implement AddFontToManager to register fonts with FontManager
- Implement CreateAndRegisterFont helper to create and register fonts in one call
- Implement RescaleFontsForDPI to update all fonts in window on DPI change
- Integrate font scaling with main window in WM_INITDIALOG (DialogProc)
- Integrate font scaling with Settings dialog in WM_INITDIALOG (SettingsDialogProc)
- Integrate font scaling with Unified dialog in WM_INITDIALOG (UnifiedDialogProc)
- Integrate font scaling with About dialog in WM_INITDIALOG (AboutDialogProc)
- Create default Segoe UI 9pt font for all dialog controls
- Create title font (12pt bold) and small font (7pt) for About dialog
- Verify unified dialog DPI handling implementation with GetWindowDPI and WM_DPICHANGED handler
- Apply fonts to all main window controls (text fields, labels, buttons, list view)
- Register main window with DPI manager for per-monitor DPI tracking
- Add explicit ResizeControls call after window initialization for proper initial scaling
- Implement main window DPI change handling via WM_DPICHANGED message
- Scale all main window controls dynamically based on current DPI
- Apply fonts to all dialog controls (buttons, labels, tab controls, text areas)
- Font rescaling automatically triggered by WM_DPICHANGED handlers via RescaleWindowForDPI
- Implement icon scaling system with ScalableIcon and IconManager structures
- Implement CreateIconManager and DestroyIconManager for icon lifecycle management
- Implement CreateScalableIcon to track icon resources at multiple sizes
- Implement DestroyScalableIcon for icon cleanup with proper handle destruction
- Implement window position and size persistence with logical coordinate storage
- Add SaveWindowPositionLogical function to save window position in DPI-independent coordinates
- Add RestoreWindowPositionLogical function to restore window position with DPI conversion
- Add EnsureWindowOnScreen function to validate and adjust window position for current monitor